--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <form id = 'inputMessage'>
-        <h1>New Message</h1>
+        <h1>Message Board</h1>
         <label for = "messageTitle">Title</label>
         <input type = "text" id = 'messageTitle' name = "messageTitle" data-type = "title"
                placeholder = 'Type message title here' autofocus>
