--- a/server/public/views/admin.html
+++ b/server/public/views/admin.html
@@ -24,6 +24,8 @@
     <input type = "submit" id ="submitButton" name = "submitButton" data-type = "submit">
 </form>
 
-<div id = "messageDisplay"></div>
+<div id = "messageDisplay">
+    <div id = "deletedMessagesInfo"></div>
+</div>
 </body>
 </html>
