--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -24,6 +24,7 @@
         <input type = "submit" id ="submitButton" name = "submitButton" data-type = "submit">
     </form>
 
-    <div id = "messageDisplay"></div>
+    <div id = "messageDisplay">
+    </div>
 </body>
 </html>
