--- a/server/public/assets/styles/style.css
+++ b/server/public/assets/styles/style.css
@@ -6,18 +6,22 @@ textarea#messageText {
     height: 100px;
     width: 300px;
 }
-div#messageDisplay {
-    margin-top: 50px;
-}
-#deletedMessagesInfo {
-    height: 50px;
+
+#userMessages {
+    height: 40px;
     width: 300px;
-    border: 1px solid black;
+    margin: 5px 0 0 5px;
+    padding-top: 20px;
+    font-style: italic;
 }
 .message {
     border: 1px solid black;
     margin:5px;
     padding: 5px;
+}
+.message-text {
+    padding-left: 10px;
+    color: grey;
 }
 .delete_button {
     border: 1px solid lightgrey;
